# Music-Platform-Django

./: RESULTS.md  conftest.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_id.py  0002_alter_song_audio.py  0003_alter_album_artist.py  0003_alter_album_creation_time.py  0004_alter_album_artist.py  0004_alter_album_id.py  0005_alter_album_options_alter_album_artist.py
albums/templates/: create_album.html  create_song.html
albums/tests/: test_albums.py  test_serializers.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_options_alter_artist_stage_name.py  0002_artist_user.py
artists/templates/: artist_list.html  create_artist.html
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_auths.py
musicplatform/: celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_user_password1_user_password2_alter_user_email_and_more.py
users/templates/: login_user.html
users/tests/: test_users.py
